--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,21 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* *** layouts *** */
+.mc-main-layout {
+  position: relative;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.mc-main-layout .mc-main-layout--left, .mc-main-layout .mc-main-layout--right {
+  position: fixed;
+  height: 80px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  gap: 32px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.mc-main-layout .mc-main-layout--left {
+  left: 32px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.mc-main-layout .mc-main-layout--left img {
+  margin-top: 6px;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+.mc-main-layout .mc-main-layout--right {
+  right: 32px;
+}/*# sourceMappingURL=App.css.map */
