Responsive settings page

--- a/src/assets/styles/_layouts.scss
+++ b/src/assets/styles/_layouts.scss
@@ -1,6 +1,6 @@
 .mc-main-layout {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     .mc-main-layout--left, .mc-main-layout--right {
         position: fixed;
         height: 80px;
