--- a/src/App.css
+++ b/src/App.css
@@ -141,7 +141,7 @@ a.active {
 /* *** layouts *** */
 .mc-main-layout {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
 }
 .mc-main-layout .mc-main-layout--left, .mc-main-layout .mc-main-layout--right {
   position: fixed;
@@ -211,7 +211,6 @@ a.active {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 16px;
 }
 .mc-model-list .ant-radio-group .ant-radio-wrapper {
   margin-inline-end: 0;
@@ -223,6 +222,27 @@ a.active {
 .mc-model-list .ant-radio-group .ant-radio-wrapper .ant-radio {
   padding: 12px;
   background-color: #060504;
+}
+
+.mc-selected-list {
+  overflow: auto;
+}
+.mc-selected-list .mc-card:first-child {
+  margin-left: 32px;
+}
+.mc-selected-list .mc-card:last-child {
+  margin-right: 32px;
+}
+
+.mc-selected-list::-webkit-scrollbar {
+  display: none;
+}
+
+.mc-selected-list {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 /* *** components *** */
@@ -438,6 +458,7 @@ input::placeholder {
   gap: 8px;
   position: relative;
   width: 200px;
+  min-width: 200px;
   height: 250px;
   border-radius: 20px;
   border: 1px solid rgba(234, 233, 232, 0.1);
@@ -543,14 +564,13 @@ input::placeholder {
 
 .mc-card-light {
   position: relative;
-  max-width: 150px;
-  margin-bottom: 16px;
-  position: relative;
+  max-width: 166px;
+  padding: 16px;
 }
 .mc-card-light .mc-radio {
   position: absolute;
-  top: -20px;
-  right: -8px;
+  top: 0;
+  right: 0;
   z-index: 1;
 }
 .mc-card-light h6 {
