--- a/src/assets/styles/_pages.scss
+++ b/src/assets/styles/_pages.scss
@@ -1,6 +1,6 @@
 .mc-page {
     height: 100%;
-    width: 100vw;
+    width: 90vw;
     padding-top: 144px;
     background-color: transparent;
     section {
@@ -39,7 +39,7 @@
     header {
         width: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         margin-block: 32px;
     }
