--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -122,13 +122,11 @@
     h6 {
         font: $tiny-title
     }
-
     span {
         font: $tiny-text;
     }
-
     max-width: 166px;
-    padding: 16px;
+    padding: 16px 4px;
 
     .mc-checkbox {
         position: absolute;
