--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -124,7 +124,7 @@ canvas {
 .mc-floating {
     position: sticky;
     bottom: 32px;
-    margin-left: auto;
+    margin-left: calc(100vw - 120px);
     margin-right: 32px;
     z-index: 9;
 }
