--- a/src/App.css
+++ b/src/App.css
@@ -768,6 +768,12 @@ input::placeholder {
 }
 .mc-audioplayer-gui .mc-audioplayer-img > span {
   position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 .mc-audioplayer-gui .mc-audioplayer-details {
   min-width: 260px;
