--- a/src/assets/styles/components/_player-gui.scss
+++ b/src/assets/styles/components/_player-gui.scss
@@ -31,6 +31,12 @@
         }
         & > span {
             position: absolute;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: rgba(0,0,0,0.3);
         }
     }
     .mc-audioplayer-details {
