--- a/src/App.css
+++ b/src/App.css
@@ -625,12 +625,15 @@ input::placeholder {
   background: transparent;
   padding: 32px;
 }
+.mc-drawer.ant-drawer-content .ant-drawer-wrapper-body {
+  position: relative;
+}
 .mc-drawer.ant-drawer-content .ant-drawer-header {
   padding: 0;
   display: flex;
   justify-content: flex-end;
   position: absolute;
-  left: -16px;
+  right: 0;
 }
 .mc-drawer.ant-drawer-content .ant-drawer-header .ant-drawer-header-title {
   flex: unset;
@@ -650,7 +653,7 @@ input::placeholder {
   min-width: 320px;
   display: flex;
   flex-direction: column;
-  gap: 64px;
+  gap: 32px;
   align-items: center;
 }
 
@@ -664,8 +667,8 @@ input::placeholder {
   align-items: center;
 }
 .mc-model-preview .mc-model-img {
-  height: 150px;
-  width: 150px;
+  height: 100px;
+  width: 100px;
   position: relative;
   display: flex;
   align-items: center;
@@ -682,12 +685,12 @@ input::placeholder {
   border-radius: 10px;
 }
 .mc-model-preview .mc-model-img img:first-child {
-  left: -32px;
+  left: -30px;
   z-index: 2;
   background: linear-gradient(rgba(234, 233, 232, 0.1), rgba(234, 233, 232, 0.1)), #060504;
 }
 .mc-model-preview .mc-model-img img:last-child {
-  right: -32px;
+  right: -16px;
   z-index: 1;
   height: 95%;
   width: 95%;
