--- a/src/assets/styles/_layouts.scss
+++ b/src/assets/styles/_layouts.scss
@@ -19,3 +19,60 @@
         right: 32px;
     }
 }
+
+.mc-empty-state {
+    height: 60vh;
+    .ant-modal-content {
+        background-color: $dark;
+        height: 100%;
+    }
+    .ant-modal-body {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .mc-empty-state-img {
+        height: 200px;
+        width: auto;
+        img {
+            height: 100%;
+            width: auto;
+            object-fit: cover;
+        }
+    }
+    .mc-empty-state-desc {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        * {
+            text-align: center;
+        }
+        gap: 16px;
+        button {
+            margin-top: 16px;
+        }
+    }
+}
+
+.mc-page-loading {
+    position: absolute;
+    z-index: 99;
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    svg {
+        fill: $primary !important;
+        height: 48px;
+        width: 48px;
+    }
+}
+
+div:has(div > canvas) {
+    width: 100vw;
+}
