fix position is null for 3D models

--- a/src/assets/styles/_pages.scss
+++ b/src/assets/styles/_pages.scss
@@ -83,3 +83,13 @@
     scrollbar-width: none;
     /* Firefox */
 }
+
+.mc-landing-page {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 16px;
+}
