--- a/src/App.css
+++ b/src/App.css
@@ -306,6 +306,16 @@ div:has(div > canvas) {
   /* Firefox */
 }
 
+.mc-landing-page {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 16px;
+}
+
 /* *** components *** */
 .mc-radio .ant-radio {
   border: 1px solid;
