--- a/src/App.css
+++ b/src/App.css
@@ -383,6 +383,27 @@ div:has(div > canvas) {
   border-color: rgba(234, 233, 232, 0.1);
 }
 
+.mc-radio-category-group {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding-top: 60px;
+}
+.mc-radio-category-group .mc-radio-category {
+  width: 100%;
+  height: 60px;
+  border: 1px solid rgba(234, 233, 232, 0.1);
+  width: 100%;
+  border-radius: 10px;
+  padding: 8px 16px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.mc-radio-category-group .mc-radio-category:hover {
+  border-color: #E1C258;
+}
+
 .mc-radio-color-group {
   display: flex;
   flex-wrap: wrap;
@@ -430,30 +451,43 @@ div:has(div > canvas) {
   border-radius: 50%;
 }
 
-.mc-color-form {
+.mc-color-form, .mc-category-form {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 32px;
+  width: 100%;
 }
-.mc-color-form .mc-color-form-actions {
+.mc-color-form .mc-color-form-actions, .mc-category-form .mc-color-form-actions {
   display: flex;
   justify-content: space-between;
 }
+.mc-color-form .mc-category-form-actions, .mc-category-form .mc-category-form-actions {
+  display: flex;
+  justify-content: end;
+}
 
-.mc-radio-color .ant-radio-inner {
+.mc-category-form {
+  width: 100%;
+}
+
+.ant-radio-wrapper-checked span:last-child {
+  color: #E1C258;
+}
+
+.mc-radio-color .ant-radio-inner, .mc-radio-category .ant-radio-inner {
   background-color: rgba(234, 233, 232, 0.1);
   border-color: rgba(234, 233, 232, 0.1);
 }
-.mc-radio-color:hover .ant-radio-inner {
+.mc-radio-color:hover .ant-radio-inner, .mc-radio-category:hover .ant-radio-inner {
   border-color: #E1C258;
 }
-.mc-radio-color .ant-radio-checked .ant-radio-inner {
+.mc-radio-color .ant-radio-checked .ant-radio-inner, .mc-radio-category .ant-radio-checked .ant-radio-inner {
   border-color: #E1C258;
   background-color: #E1C258;
 }
-.mc-radio-color .ant-radio-checked::after {
+.mc-radio-color .ant-radio-checked::after, .mc-radio-category .ant-radio-checked::after {
   border-color: #E1C258;
 }
 
@@ -544,6 +578,11 @@ input::-moz-placeholder {
 input::placeholder {
   color: #EAE9E8 !important;
   opacity: 0.4;
+}
+
+.mc-form-actions {
+  display: flex;
+  justify-content: space-between;
 }
 
 .mc-card {
