--- a/src/assets/styles/components/_forms.scss
+++ b/src/assets/styles/components/_forms.scss
@@ -40,6 +40,27 @@
     }
 }
 
+.mc-radio-category-group {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding-top: 60px;
+    .mc-radio-category {
+        width: 100%;
+        height: 60px;
+        border: 1px solid $border;
+        width: 100%;
+        border-radius: 10px;
+        padding: 8px 16px;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        &:hover {
+            border-color: $primary;
+        }
+    }
+}
+
 .mc-radio-color-group {
     display: flex;
     flex-wrap: wrap;
@@ -98,20 +119,34 @@
     }
 }
 
-.mc-color-form {
+.mc-color-form, .mc-category-form {
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 32px;
-
+    width: 100%;
     .mc-color-form-actions {
         display: flex;
         justify-content: space-between;
     }
+    .mc-category-form-actions {
+        display: flex;
+        justify-content: end;
+    }
 }
 
-.mc-radio-color {
+.mc-category-form {
+    width: 100%;
+}
+
+.ant-radio-wrapper-checked {
+    span:last-child {
+        color: $primary;
+    }
+}
+
+.mc-radio-color, .mc-radio-category {
     .ant-radio-inner {
         background-color: $border;
         border-color: $border;
@@ -123,9 +158,11 @@
         }
     }
 
-    .ant-radio-checked .ant-radio-inner {
-        border-color: $primary;
-        background-color: $primary;
+    .ant-radio-checked {
+        .ant-radio-inner {
+            border-color: $primary;
+            background-color: $primary;
+        }
     }
 
     .ant-radio-checked::after {
@@ -221,4 +258,9 @@
 input::placeholder {
     color: $light !important;
     opacity: 0.4;
+}
+
+.mc-form-actions {
+    display: flex;
+    justify-content: space-between;   
 }
