--- a/src/assets/styles/components/_preview.scss
+++ b/src/assets/styles/components/_preview.scss
@@ -8,6 +8,40 @@
     align-items: center;
 
     .mc-model-img {
+        justify-content: center;
+        img {
+            position: absolute;
+            height: 100%;
+            width: auto;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+    }
+
+    .mc-music-img {
+        img {
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            border-radius: 10px;
+        
+            &:first-child {
+                left: -30px;
+                z-index: 2;
+                background: linear-gradient($border, $border), $dark;
+            }
+    
+            &:last-child {
+                right: -16px;
+                z-index: 1;
+                height: 95%;
+                width: 95%;
+            }
+        }
+    }
+    
+    .mc-music-img, .mc-model-img {
         height: 100px;
         width: 100px;
         position: relative;
@@ -16,27 +50,6 @@
 
         .mc-border-img {
             border: 1px solid $border;
-        }
-
-        img {
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            object-fit: cover;
-            border-radius: 10px;
-
-            &:first-child {
-                left: -30px;
-                z-index: 2;
-                background: linear-gradient($border, $border), $dark;
-            }
-
-            &:last-child {
-                right: -16px;
-                z-index: 1;
-                height: 95%;
-                width: 95%;
-            }
         }
     }
 
